Dark mode localStorage saving bug corrected by Sudheer. Adnan Image changed. Home page content added

--- a/src/components/UI/Card/CardDark.module.css
+++ b/src/components/UI/Card/CardDark.module.css
@@ -26,7 +26,7 @@
 
 .cardHeader {
   font-size: 24px;
-  color: var(--dark-mode-text-color-soft-1);
+  color: var(--dark-mode-text-color-3);
   font-weight: 500;
   text-align: left;
   padding: 0 0 1rem 0;
@@ -41,7 +41,7 @@
 .cardBody {
   padding: 1rem 1.4rem 1.2rem 1.4rem;
   text-align: left;
-  color: var(--dark-mode-text-color-soft-2);
+  color: var(--dark-mode-text-color-soft-1);
   transition: 0.2s;
 }
 
